--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,10 +3,19 @@ body {
     margin: 10px;
 }
 
+h1 {
+    margin: 0px;
+    border-bottom: 1px solid #e6e6e6;
+    margin-bottom: 25px;
+    padding-bottom: 5px;
+}
+
 .navbar, .content, .footer {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .01) !important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1) !important;
 }
 
 .navbar {
@@ -59,12 +68,11 @@ body {
 }
 
 .content {
-    border: 1px solid #969696;
+    border: 1px solid #cfcfcf;
     padding: 10px;
 }
 
 .footer {
-    border: 1px solid #969696;
     padding: 3px;
     margin-top: 10px;
 }
