--- a/static/css/oldschool.css
+++ b/static/css/oldschool.css
@@ -15,6 +15,8 @@
 	E-mail: d1mk4x(at)gmail(dot)com
 */
 
+html, body { background-color: #FFD9B1; }
+
 #help_us {
     float: left;
     padding-top: 50px;
@@ -256,7 +258,7 @@ body {
 #container {
     border-radius: 4px;
     background: #FFF none repeat scroll 0% 0%;
-    box-shadow: 0px 0px 2px #BABABA;
+    box-shadow: 0px 0px 2px #1F7579;
     padding: 10px;
     width: 95%;
 }
@@ -559,6 +561,7 @@ body {
 
 #footer a {
     color: #525252;
+	font-size: 13px;
     text-decoration: underline;
 }
 
