--- a/static/css/me.css
+++ b/static/css/me.css
@@ -49,14 +49,17 @@ h1 { color: #545454; font-size: 21px;  margin: 0;  border-bottom: 1px solid #d4d
     color: #000;
     padding: 7px;
     background-color: #ECECEC;
-    border: 1px dashed #06525E;
     text-align: center;
     position: relative;
     top: 6px;
 }
-.news-content { font-family: "Arial", sans-serif; font-size: 14px; color: #000000; position: relative; top: 7px;}
+.news-content { font-family: "Arial",sans-serif;
+    font-size: 14px;
+    color: #000;
+    position: relative;
+    top: 5px;
+    border-top: 1px solid #000; }
 .news-content p { padding: 15px;
-    background-color: #06525E;
     position: relative;
     top: 0px;
     text-align: center;
